:memo: Add documentation for Update Opening
